<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post_note"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.gmail.francoluigi95.taskAndroid.AddActivity">

...
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:layout_marginBottom="187dp"
        android:text="" />

    <Button
        android:id="@+id/button"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:layout_marginBottom="56dp"
        android:layout_marginLeft="65dp" android:layout_marginStart="65dp"
...
