<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_get_note"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.gmail.francoluigi95.taskAndroid.GetActivity">


    <TextView
        android:id="@+id/noteOutput"
        android:layout_width="282dp"
        android:layout_height="155dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="77dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/buttongetactivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autocomplete_title"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/buttongetactivity"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="@string/getTask"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/notetext"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:text="@string/insertTitle"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete_title"

        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:textSize="24sp"
        tools:layout_conversion_absoluteHeight="53dp"
        tools:layout_conversion_absoluteWidth="21dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>

